--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,6 @@
-playwright>=1.40.0
-beautifulsoup4>=4.12.0
-python-dateutil==2.8.2
-python-dotenv>=1.0.0
-requests>=2.31.0
-httpx[http2]==0.24.1
-h2==4.1.0
+selenium==4.15.2
+webdriver-manager==4.0.1
+requests==2.31.0
+beautifulsoup4==4.12.2
 lxml==4.9.3
-pydantic==2.3.0
+schedule==1.2.0
