--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,14 @@ notes
 #*.json
 __pycache__
 covers
+
+# Frontend React app
+frontend/node_modules/
+frontend/build/
+frontend/.env.local
+frontend/.env.development.local
+frontend/.env.test.local
+frontend/.env.production.local
+frontend/npm-debug.log*
+frontend/yarn-debug.log*
+frontend/yarn-error.log*
