--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
-selenium==4.15.2
-webdriver-manager==4.0.1
+playwright==1.40.0
 requests==2.31.0
 beautifulsoup4==4.12.2
 lxml==4.9.3
-schedule==1.2.0
 fastapi==0.104.1
 uvicorn==0.24.0
