--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -1,4 +1,5 @@
-FROM python:3.11-bullseye
+# Multi-architecture support
+FROM --platform=$BUILDPLATFORM python:3.11-bullseye
 
 # Set working directory
 WORKDIR /app
