--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -112,10 +112,22 @@ jobs:
       security-events: write
     
     steps:
+    - name: Extract metadata for security scan
+      id: meta-scan
+      uses: docker/metadata-action@v5
+      with:
+        images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME_BACKEND }}
+        tags: |
+          type=ref,event=branch
+          type=ref,event=pr
+          type=semver,pattern={{version}}
+          type=semver,pattern={{major}}.{{minor}}
+          type=raw,value=latest,enable={{is_default_branch}}
+
     - name: Run Trivy vulnerability scanner on backend
       uses: aquasecurity/trivy-action@master
       with:
-        image-ref: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME_BACKEND }}:latest
+        image-ref: ${{ fromJSON(steps.meta-scan.outputs.json).tags[0] }}
         format: 'sarif'
         output: 'backend-trivy-results.sarif'
         exit-code: '0'
