--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -1,5 +1,5 @@
 # Multi-architecture support
-FROM --platform=$BUILDPLATFORM python:3.11-bullseye
+FROM python:3.11-bullseye
 
 # Set working directory
 WORKDIR /app
