--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,6 @@ fastapi==0.104.1
 uvicorn==0.24.0
 PyJWT==2.8.0
 fuzzywuzzy==0.18.0
-python-Levenshtein==0.21.1
+Levenshtein==0.25.0
 yt-dlp==2024.8.6
 httpx==0.27.0
